Adjusted dependencies for tests, added readme