@@ -36,11 +36,19 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-liquibase-test'
-    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
+//    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+    testImplementation 'org.testcontainers:postgresql:1.21.4'
+    testImplementation 'org.assertj:assertj-core'
+    testImplementation 'io.rest-assured:rest-assured:6.0.0'
     testCompileOnly 'org.projectlombok:lombok'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testAnnotationProcessor 'org.projectlombok:lombok'
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
 
 tasks.named('test') {
